libraries/HALVMCore/cbits/include/privileged.h

#define SPLIT_PRIVILEGED
int init_io_bitmap();
int update_va_mapping_otherdomain(unsigned long, unsigned long, 
                				  unsigned long, domid_t);
int populate_physmap(domid_t, unsigned long, void *);
int get_my_domid();
int set_iopl(u_int32_t);
int send_eoi(u_int32_t);
int do_domctl_op(xen_domctl_t *op);
int do_sysctl_op(xen_sysctl_t *op);
int do_platform_op(xen_platform_op_t *op);
int do_dom0_operation(dom0_op_t *op);