libraries/HALVMCore/Hypervisor/Privileged.hsc


instance Storable HostPhysicalInfo where
  alignment _ = 8
  sizeOf _ = (#size xen_sysctl_physinfo_t)
  peek ptr = do
    threads_per_core <- (#peek xen_sysctl_physinfo_t, threads_per_core) ptr
    cores_per_socket <- (#peek xen_sysctl_physinfo_t, cores_per_socket) ptr
    num_cpus         <- (#peek xen_sysctl_physinfo_t, nr_cpus         ) ptr
    max_node_id      <- (#peek xen_sysctl_physinfo_t, max_node_id     ) ptr
    cpu_khz          <- (#peek xen_sysctl_physinfo_t, cpu_khz         ) ptr
    total_pages      <- (#peek xen_sysctl_physinfo_t, total_pages     ) ptr
    free_pages       <- (#peek xen_sysctl_physinfo_t, free_pages      ) ptr
    scrub_pages      <- (#peek xen_sysctl_physinfo_t, scrub_pages     ) ptr
    hw_capability    <- peekArray 8 ((#ptr xen_sysctl_physinfo_t, hw_cap) ptr)
    max_cpu_id       <- (#peek xen_sysctl_physinfo_t, max_cpu_id      ) ptr
#if XEN_SYSCTL_INTERFACE_VERSION < 0x00000008
    cpu_to_node      <- (#peek xen_sysctl_physinfo_t, cpu_to_node     ) ptr
#endif
    capabilities     <- (#peek xen_sysctl_physinfo_t, capabilities    ) ptr
    return HostPhysicalInfo {..}
  poke ptr hpi = do
    (#poke xen_sysctl_physinfo_t, threads_per_core) ptr (threads_per_core hpi)
    (#poke xen_sysctl_physinfo_t, cores_per_socket) ptr (cores_per_socket hpi)
    (#poke xen_sysctl_physinfo_t, nr_cpus         ) ptr (num_cpus         hpi)
    (#poke xen_sysctl_physinfo_t, max_node_id     ) ptr (max_node_id      hpi)
    (#poke xen_sysctl_physinfo_t, cpu_khz         ) ptr (cpu_khz          hpi)
    (#poke xen_sysctl_physinfo_t, total_pages     ) ptr (total_pages      hpi)
    (#poke xen_sysctl_physinfo_t, free_pages      ) ptr (free_pages       hpi)
    (#poke xen_sysctl_physinfo_t, scrub_pages     ) ptr (scrub_pages      hpi)
    pokeArray ((#ptr xen_sysctl_physinfo_t, hw_cap) ptr) (hw_capability   hpi)
    (#poke xen_sysctl_physinfo_t, max_cpu_id      ) ptr (max_cpu_id       hpi)
#if XEN_SYSCTL_INTERFACE_VERSION < 0x00000008
    (#poke xen_sysctl_physinfo_t, cpu_to_node     ) ptr (cpu_to_node      hpi)
#endif
    (#poke xen_sysctl_physinfo_t, capabilities    ) ptr (capabilities     hpi)

--
-- --------------------------------------------------------------------------
--

foreign import ccall unsafe "strings.h bzero"
  bzero :: Ptr a -> Word32 -> IO ()

foreign import ccall unsafe "privileged.h init_io_bitmap"
  init_io_bitmap :: IO Int
foreign import ccall unsafe "privileged.h update_va_mapping_otherdomain" 
  update_va_mapping_other :: Word32 -> Word32 -> Word32 -> Word16 -> IO Int
foreign import ccall unsafe "privileged.h populate_physmap" 
  populate_physmap :: Word16 -> Word32 -> Ptr a -> IO Int
foreign import ccall unsafe "privileged.h get_my_domid"
  get_my_domid :: IO Int

foreign import ccall unsafe "events.h evtchn_alloc_unbound" 
  evtchn_alloc_unbound :: Word16 -> Word16 -> IO Word10

#ifdef SPLIT_PRIVILEGED
foreign import ccall unsafe "privileged.h do_domctl_op" 
  do_domctl_op :: Ptr a -> IO Int
foreign import ccall unsafe "privileged.h do_sysctl_op" 
  do_sysctl_op :: Ptr a -> IO Int
foreign import ccall unsafe "privileged.h do_platform_op" 
  do_platform_op :: Ptr a -> IO Int
#else
foreign import ccall unsafe "privileged.h do_dom0_operation" 
  do_dom0_op :: Ptr a -> IO Int
#endif

foreign import ccall unsafe "privileged.h set_iopl"
  set_iopl :: Word32 -> IO Int
foreign import ccall unsafe "privileged.h send_eoi"
  send_eoi :: Word32 -> IO Int

